                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------


04-10-14 mma (testem14-V10-00-03)
- MT migration

20-06-14 mma (testem14-V10-00-02)
- remove PhysicsList::SetCuts(). Update macros
- suppress EventAction and its Messenger
- remove hbook tools

17-06-14 I. Hrivnacova (testem14-V10-00-01)
 - Fixed problems reported by Davide Mancusi:
  - Moving tools/hbook/*.f files in examples/extended/common/analysis/src 
    to avoid their retrieval from Geant4 source/includes which causes problem 
    when building examples against Geant4 build directory. 
  - Added -lkernlib in list of libraries (required with Debian cernlib 
    distribution 20061220)
- In CMake build: replaced explicit use of gfortran with 
  enable_language(Fortran) and using fortran_sources variable in analogous 
  way as sources
    
11-06-14 I. Hrivnacova (testem14-V10-00-00)
- Fixed path to copy_files.sh, clean_files.sh in GNUmakefile
  (this makes GNUmake build working with Geant4 installation via
   CMake)
- Fixed path to hbook *.f files in GNUmakefile.tools_hbook

07-09-13 mma (testem14-V09-06-10)
- PhysicsList: restore G4GammaConversionToMuons

28-07-13 P.Gumplinger (testem14-V09-06-09)
- fix clang32 compilation warning

11-07-13 I.Hrivnacova (testem14-V09-06-08) 
- Updated CMakeLists.txt and SharedFilesList.txt for added classes
  in Hbook analysis code
- In HistoManager: use new analysis manager method SetH1Activation()        

20-06-13 mma (testem14-V09-06-07)
- SteppingVerbose: use G4Step::GetSecondaryInCurrentStep()

14-06-13 mma (testem14-V09-06-06)
- SteppingAction: use G4Step::GetSecondaryInCurrentStep()

07-06-13 mma (testem14-V09-06-05)